# Pocket_KAI_Backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  config.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
database_updater_service/: Dockerfile  cli.py  config.py  docker-compose.dev.yml  main.py  pyproject.toml
database_updater_service/docker/: Dockerfile  docker-compose.dev.yml
database_updater_service/utils/: common.py  exam_updater_helper.py  exams_updater.py  helper.py  schedule_updater.py  schedule_updater_helper.py
database_updater_service/utils/kai_parser_api/: api.py  base.py  schemas.py
database_updater_service/utils/pocket_kai_api/: api.py  base.py  schemas.py
kai_parser_service/: .env.dist  Dockerfile  Makefile  alembic.ini  config.py  docker-compose.dev.yml  main.py  pyproject.toml
kai_parser_service/api/: dependencies.py
kai_parser_service/api/routers/: __init__.py  exam.py  group.py  schedule.py  task.py  user.py
kai_parser_service/api/schemas/: exam.py  group.py  schedule.py  task.py
kai_parser_service/core/: common.py  unit_of_work.py
kai_parser_service/core/entities/: base.py  task.py
kai_parser_service/core/exceptions/: api.py  base.py  common.py
kai_parser_service/core/repositories/: base.py  providers.py  task.py
kai_parser_service/core/services/: providers.py  task.py
kai_parser_service/database/models/: __init__.py  base.py  task.py
kai_parser_service/docker/: Dockerfile  docker-compose.dev.yml  gunicorn_conf.py
kai_parser_service/utils/kai_parser/: __init__.py  base.py  helper.py  old_parser.py  parser.py  providers.py  user_parser.py  utils.py
kai_parser_service/utils/pocket_kai_api/: api.py  providers.py
kai_parser_service/utils/tasks/: additional_user_data.py
pocket_kai_api_service/: .env.dist  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.dev.yml  main.py  pyproject.toml
pocket_kai_api_service/api/: __init__.py  dependencies.py
pocket_kai_api_service/api/routers/: __init__.py  auth.py  common.py  department.py  discipline.py  lesson.py  pocket_kai_user.py  student.py  task.py  teacher.py  user.py
pocket_kai_api_service/api/schemas/: common.py  department.py  discipline.py  group.py  institute.py  kai_user.py  lesson.py  pocket_kai_user.py  profile.py  schedule.py  speciality.py  student.py  task.py  teacher.py  user.py
pocket_kai_api_service/core/: unit_of_work.py
pocket_kai_api_service/core/entities/: common.py  department.py  group.py  institute.py  kai_user.py  lesson.py  pocket_kai_user.py  profile.py  refresh_token.py  schedule.py  service_token.py  speciality.py  student.py  teacher.py  user.py
pocket_kai_api_service/core/exceptions/: auth.py  base.py  kai_parser.py
pocket_kai_api_service/database/: base.py  db.py
pocket_kai_api_service/docker/: Dockerfile  docker-compose.dev.yml
pocket_kai_api_service/pocket_kai/: config.py  main.py
pocket_kai_api_service/schedule_updater/: __main__.py  main.py
utils/: other.py
(+281 files in other folders)
