[tool.poetry]
name = "kai-parser-service"
version = "0.1.0"
description = ""
authors = ["PrinterOMG <PrinterOMG@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
aiohttp = "^3.9.5"
bs4 = "^0.0.2"
pydantic-settings = "^2.2.1"
phonenumbers = "^8.13.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
